--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div><input type="text" value id="n1"></div>
                 <div><input type="text" value id="num1"></div>
                 <input type="text" class="opr" id="opr">
-                <div><input type="text" value id="num2"></div>
+                <div><input type="text" value id="num2" onchange="cal()"></div>
                 = <input type="text" value id="output">
             </div>
             <div>
